--- a/src/02node/my_first_package/CMakeLists.txt
+++ b/src/02node/my_first_package/CMakeLists.txt
@@ -18,6 +18,15 @@ install(TARGETS
   helloworld
   DESTINATION lib/${PROJECT_NAME})
 
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
